[package]
name = "debug"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode.workspace = true
rand.workspace = true
serde.workspace = true
bs58 = { workspace = true }
serde_bytes.workspace = true
solana-gossip = { workspace = true }
solana-sdk = { workspace = true }
solana-runtime = { workspace = true }
solana-accounts-db = { workspace = true }
solana-ledger = { workspace = true }
solana-perf = { workspace = true }
rand_chacha = "0.3.1"
ahash.workspace = true
